--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1280,12 +1280,18 @@ a:hover {
   -o-transition: padding, 1s;
   transition: padding, 1s;
   font-family: "Dosis", sans-serif !important;
-  background-color: #b12e4f;
+  background-color: rgba(51, 51, 51, 0.9);
 }
-/* line 224, ../scss/custom.scss */
+@media only all and (max-width: 767px) {
+  /* line 218, ../scss/custom.scss */
+  .thumbnail h3 {
+    background-color: #b12e4f;
+  }
+}
+/* line 227, ../scss/custom.scss */
 .thumbnail img {
   height: auto !important;
-  border: 3px dotted #b12e4f;
+  border: 3px dotted #aaa;
   -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   filter: grayscale(100%);
@@ -1301,7 +1307,7 @@ a:hover {
   transition: border, 1s;
 }
 @media only all and (max-width: 767px) {
-  /* line 224, ../scss/custom.scss */
+  /* line 227, ../scss/custom.scss */
   .thumbnail img {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
     opacity: 1;
@@ -1312,23 +1318,23 @@ a:hover {
     width: 100% !important;
   }
 }
-/* line 240, ../scss/custom.scss */
+/* line 243, ../scss/custom.scss */
 .thumbnail i {
   color: #bf7485;
 }
 @media only all and (max-width: 767px) {
-  /* line 240, ../scss/custom.scss */
+  /* line 243, ../scss/custom.scss */
   .thumbnail i {
     color: black;
   }
 }
-/* line 246, ../scss/custom.scss */
+/* line 249, ../scss/custom.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 255, ../scss/custom.scss */
+  /* line 258, ../scss/custom.scss */
   .thumbnail:hover img, .thumbnail:focus img {
     border: 3px dotted #b12e4f;
     border-bottom: 3px dotted #b12e4f;
@@ -1342,7 +1348,7 @@ a:hover {
     -o-transition: opacity, 0.5s;
     transition: opacity, 0.5s;
   }
-  /* line 265, ../scss/custom.scss */
+  /* line 268, ../scss/custom.scss */
   .thumbnail:hover h3, .thumbnail:focus h3 {
     background: #b12e4f;
     color: white;
@@ -1356,29 +1362,29 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 273, ../scss/custom.scss */
+  /* line 276, ../scss/custom.scss */
   .thumbnail:hover i, .thumbnail:focus i {
     color: black;
   }
 }
 
-/* line 279, ../scss/custom.scss */
+/* line 282, ../scss/custom.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 279, ../scss/custom.scss */
+  /* line 282, ../scss/custom.scss */
   .thumb-title {
     min-height: 35px;
   }
 }
 
-/* line 287, ../scss/custom.scss */
+/* line 290, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 297, ../scss/custom.scss */
+/* line 300, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1386,35 +1392,35 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 303, ../scss/custom.scss */
+/* line 306, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 307, ../scss/custom.scss */
+/* line 310, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 312, ../scss/custom.scss */
+/* line 315, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 307, ../scss/custom.scss */
+  /* line 310, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 307, ../scss/custom.scss */
+  /* line 310, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 324, ../scss/custom.scss */
+/* line 327, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1422,16 +1428,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 333, ../scss/custom.scss */
+/* line 336, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 337, ../scss/custom.scss */
+/* line 340, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 340, ../scss/custom.scss */
+/* line 343, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1440,7 +1446,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 345, ../scss/custom.scss */
+/* line 348, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1450,7 +1456,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 352, ../scss/custom.scss */
+/* line 355, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1459,13 +1465,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 362, ../scss/custom.scss */
+  /* line 365, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 367, ../scss/custom.scss */
+/* line 370, ../scss/custom.scss */
 .ktext {
   line-height: 21px !important;
   margin: 15px 0 !important;
@@ -1475,17 +1481,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 379, ../scss/custom.scss */
+/* line 382, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 382, ../scss/custom.scss */
+/* line 385, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #bf7485;
 }
 
-/* line 388, ../scss/custom.scss */
+/* line 391, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #b12e4f;
   background-color: #b12e4f;
@@ -1495,7 +1501,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 393, ../scss/custom.scss */
+/* line 396, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #bf7485;
   -webkit-transition: background-color, 0.25s;
@@ -1507,126 +1513,126 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 404, ../scss/custom.scss */
+/* line 407, ../scss/custom.scss */
 .mq-list {
   padding-bottom: 20px;
 }
-/* line 406, ../scss/custom.scss */
+/* line 409, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 406, ../scss/custom.scss */
+  /* line 409, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 406, ../scss/custom.scss */
+  /* line 409, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 406, ../scss/custom.scss */
+  /* line 409, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 421, ../scss/custom.scss */
+/* line 424, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 421, ../scss/custom.scss */
+  /* line 424, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 421, ../scss/custom.scss */
+  /* line 424, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 430, ../scss/custom.scss */
+/* line 433, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 430, ../scss/custom.scss */
+  /* line 433, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 436, ../scss/custom.scss */
+/* line 439, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 439, ../scss/custom.scss */
+/* line 442, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 445, ../scss/custom.scss */
+/* line 448, ../scss/custom.scss */
 .entry-content {
   padding: 15px 3px;
 }
-/* line 447, ../scss/custom.scss */
+/* line 450, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
   text-shadow: 0px 2px 3px black;
 }
 @media only all and (max-width: 991px) {
-  /* line 447, ../scss/custom.scss */
+  /* line 450, ../scss/custom.scss */
   .entry-content p {
     font-size: 15px;
     line-height: 21px;
   }
 }
-/* line 455, ../scss/custom.scss */
+/* line 458, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 462, ../scss/custom.scss */
+/* line 465, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 468, ../scss/custom.scss */
+  /* line 471, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 474, ../scss/custom.scss */
+/* line 477, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 478, ../scss/custom.scss */
+/* line 481, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 481, ../scss/custom.scss */
+/* line 484, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 485, ../scss/custom.scss */
+/* line 488, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 490, ../scss/custom.scss */
+/* line 493, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 496, ../scss/custom.scss */
+/* line 499, ../scss/custom.scss */
 .hero-right {
   margin-top: 21px;
   margin-bottom: 40px;
@@ -1637,41 +1643,41 @@ a:hover {
   border-radius: 10px;
 }
 @media only all and (max-width: 767px) {
-  /* line 496, ../scss/custom.scss */
+  /* line 499, ../scss/custom.scss */
   .hero-right {
     margin-bottom: 0;
   }
 }
 
-/* line 505, ../scss/custom.scss */
+/* line 508, ../scss/custom.scss */
 .col-page-left {
   padding: 0 10px 0 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 505, ../scss/custom.scss */
+  /* line 508, ../scss/custom.scss */
   .col-page-left {
     padding: 0;
   }
 }
 
-/* line 514, ../scss/custom.scss */
+/* line 517, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
 @media only all and (max-width: 767px) {
-  /* line 514, ../scss/custom.scss */
+  /* line 517, ../scss/custom.scss */
   .above-header {
     height: 190px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 514, ../scss/custom.scss */
+  /* line 517, ../scss/custom.scss */
   .above-header {
-    height: 134px;
+    height: 175px;
   }
 }
-/* line 525, ../scss/custom.scss */
+/* line 528, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 30px;
   font-size: 75px;
@@ -1681,20 +1687,20 @@ a:hover {
   padding: 15px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 525, ../scss/custom.scss */
+  /* line 528, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 525, ../scss/custom.scss */
+  /* line 528, ../scss/custom.scss */
   .above-header h1 {
     font-size: 49px;
     top: 155px !important;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 525, ../scss/custom.scss */
+  /* line 528, ../scss/custom.scss */
   .above-header h1 {
     font-size: 32px;
     margin-left: 0;
@@ -1705,13 +1711,13 @@ a:hover {
   }
 }
 
-/* line 551, ../scss/custom.scss */
+/* line 554, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
   position: relative;
 }
 
-/* line 559, ../scss/custom.scss */
+/* line 562, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: auto;
@@ -1720,13 +1726,13 @@ a:hover {
   z-index: 21;
 }
 
-/* line 567, ../scss/custom.scss */
+/* line 570, ../scss/custom.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 572, ../scss/custom.scss */
+  /* line 575, ../scss/custom.scss */
   #cb-a, .home #cb-a, .blog #cb-a {
     height: 1100px;
     width: 930px !important;
@@ -1735,14 +1741,14 @@ a:hover {
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 572, ../scss/custom.scss */
+  /* line 575, ../scss/custom.scss */
   #cb-a, .home #cb-a, .blog #cb-a {
     width: 560px !important;
     background-position: -176px -110px !important;
   }
 }
 
-/* line 585, ../scss/custom.scss */
+/* line 588, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom-shadow.png?1389436022');
   background-position: -162px 50px;
@@ -1751,65 +1757,65 @@ a:hover {
   width: 100%;
 }
 @media only all and (max-width: 1199px) {
-  /* line 585, ../scss/custom.scss */
+  /* line 588, ../scss/custom.scss */
   #cb-a {
     background-position: -370px 50px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 585, ../scss/custom.scss */
+  /* line 588, ../scss/custom.scss */
   #cb-a {
     background-position: -490px 50px;
   }
 }
 
-/* line 604, ../scss/custom.scss */
+/* line 607, ../scss/custom.scss */
 .home #cb-a {
   background-position: -550px 13px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 604, ../scss/custom.scss */
+  /* line 607, ../scss/custom.scss */
   .home #cb-a {
     background-position: -650px 20px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 604, ../scss/custom.scss */
+  /* line 607, ../scss/custom.scss */
   .home #cb-a {
     background-position: -750px 20px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 604, ../scss/custom.scss */
+  /* line 607, ../scss/custom.scss */
   .home #cb-a {
     width: 740px !important;
     background-position: -276px -90px !important;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 620, ../scss/custom.scss */
+  /* line 623, ../scss/custom.scss */
   .home .entry-content {
     padding: 0;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 620, ../scss/custom.scss */
+  /* line 623, ../scss/custom.scss */
   .home .entry-content {
     margin-top: -15px;
   }
 }
-/* line 628, ../scss/custom.scss */
+/* line 631, ../scss/custom.scss */
 .home .main-content-inner span {
   color: #bf7485;
 }
 @media only all and (max-width: 479px) {
-  /* line 631, ../scss/custom.scss */
+  /* line 634, ../scss/custom.scss */
   .home .above-header {
     height: 285px;
   }
 }
 
-/* line 640, ../scss/custom.scss */
+/* line 643, ../scss/custom.scss */
 .blog #cb-a {
   background-position: 70% -84px;
 }
@@ -1817,7 +1823,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 650, ../scss/custom.scss */
+/* line 653, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
