trying a fix for removing parallax from mobile

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -581,7 +581,7 @@ $thumb_hover: $red;
     }
     @include max_phone {
         width: 560px !important;
-        background-position: -176px -110px !important;//-111px -60px !important;
+        background-position: -189px -110px !important;
     }
 }
 
