--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -9,6 +9,7 @@
 @import "typography";
 @import "navbar";
 @import "sections";
+@import "thumbs";
 @import "social";
 
 html, body {
@@ -95,7 +96,7 @@ a:hover {
     margin: 20px 0 0;
     padding-bottom: 0;
     @include max_tablet {
-        margin: 30px 0 0;
+        margin: 30px 15px 0;
     }
     h1{
         @include tablet {
@@ -169,10 +170,34 @@ a:hover {
     }
 }
 
-
 .search, .error404 {
     padding: 60px;
 }
+
+#avatar {
+    width:  17px;
+    height: 17px;
+    margin-top: 1px;
+    margin-right: 13px;
+}
+
+.col-content {
+    padding-left:  0px;
+    padding-right: 50px;
+    overflow: hidden;
+
+    ul {
+        list-style: disc !important;
+    }
+
+    @include max_laptop {
+        padding-right: 40px;
+    }
+    @include max_tablet {
+        padding-right: 0;
+    }
+}
+
 
 /* 
  *  Sidebar
@@ -196,145 +221,13 @@ a:hover {
 
 
 /* 
- *  Thumbnails
+ *  Modal
  */
-
-.row-thumbnails {
-    margin-left: -15px;
-    margin-right: -15px;
-    margin-bottom: 0;
-
-    li {
-        @include max($pager + 50){
-            width: 100% !important;
-            clear: both;
-            min-height: 0;
-        }
-    }
-}
-
-$thumb_back: rgba(#333, 0.9);
-$thumb_hover: $red;
-
-.thumbnail {
-    @extend %transBg;
-    padding:        0;
-    margin-bottom:  1%;
-    
-    // @include transition(all, 0s);
-
-    h3 {
-        @include transition (background-color,  1s);
-        @include transition (padding,           1s);
-        font-family: "Dosis", sans-serif !important;
-        background-color: $thumb_back;
-        @include max_tablet {
-            background-color: $red;
-        }
-    }
-    img {
-        height: auto !important;
-        border: 3px dotted #aaa;
-        @include filter(grayscale(100%));
-        @include opacity(0.3);
-        @include transition(opacity, 1s);
-        @include transition(border, 1s);
-
-        @include max_tablet {
-            @include opacity(1);
-            @include filter(grayscale(100%));
-            border: 3px dotted $red;
-            width: 100% !important;
-        }
-    }
-
-    i {
-        color: $blue;
-        @include max_tablet {
-            color: black;
-        }
-    }
-    .caption {
-        text-align: center;
-        padding: 10px 0 0 0;
-    }
-
-    // Hover states
-
-    &:hover, &:focus {
-        @include min_tablet {
-            img {
-                border: 3px dotted $thumb_hover;
-                border-bottom: 3px dotted $thumb_hover;
-                @include filter(grayscale(0%));
-                // @include transition(border, 0.5s);
-                @include opacity(1);
-                @include transition(opacity, 0.5s);
-                // @include filter(blur(0));
-                // @include transition(blur, 0.2s);
-            }
-            h3 {
-                background: $thumb_hover;//darken($red, 10%);
-                color: white;
-                // color: lighten($rust, 5%);
-                padding-top: 20px;
-                @include transition (background-color, 0.2s);
-                @include transition (padding, 0.2s);
-            }
-            i {
-                color: black;
-            }
-        }
-    }
-}
-.thumb-title {
-    min-height: 58px;
-    @include max($pager + 1){
-        min-height: 35px;
-    }
-}
-
 
 .modal {
     top: 10%;
 }
 
-
-
-
-
-
-
-#avatar {
-    width:  17px;
-    height: 17px;
-    margin-top: 1px;
-    margin-right: 13px;
-}
-.visit-site {
-    margin: 40px 0;
-}
-
-.col-content {
-    padding-left:  0px;
-    padding-right: 50px;
-    overflow: hidden;
-
-    ul {
-        list-style: disc !important;
-    }
-
-    @include max_laptop {
-        padding-right: 40px;
-    }
-    @include max_tablet {
-        padding-right: 0;
-    }
-}
-
-.portfolio-desc {
-    padding: 15px 0 45px 0;
-}
 
 /* 
  *  Soliloquy Slider 
@@ -535,13 +428,15 @@ $thumb_hover: $red;
 
     h1 {
         margin-top: 30px;
-        font-size: 75px;
-        // z-index: 999;
+        padding: 15px;
+
         position: absolute;
-        // top: 140px !important;
+        top: 0 !important;
         left: auto !important;
         right: 0;
-        padding: 15px;
+
+        font-size: 75px;
+
         @include max_desktop{
             font-size: 65px;
         }
