fixed main-container > container & h1 margin minor bugs

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1050,7 +1050,7 @@ section .col-sm-5, section .col-md-6 {
     -o-transition: opacity, 0.5s;
     transition: opacity, 0.5s;
   }
-  /* line 79, ../scss/_thumbs.scss */
+  /* line 77, ../scss/_thumbs.scss */
   .thumbnail:hover h3, .thumbnail:focus h3 {
     background: #b12e4f;
     color: white;
@@ -1064,18 +1064,18 @@ section .col-sm-5, section .col-md-6 {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
-  /* line 87, ../scss/_thumbs.scss */
+  /* line 84, ../scss/_thumbs.scss */
   .thumbnail:hover i, .thumbnail:focus i {
     color: black;
   }
 }
 
-/* line 93, ../scss/_thumbs.scss */
+/* line 90, ../scss/_thumbs.scss */
 .thumb-title {
   min-height: 58px;
 }
 @media only all and (max-width: 320px) {
-  /* line 93, ../scss/_thumbs.scss */
+  /* line 90, ../scss/_thumbs.scss */
   .thumb-title {
     min-height: 35px;
   }
@@ -1272,59 +1272,61 @@ a:hover {
 @media only all and (max-width: 767px) {
   /* line 94, ../scss/custom.scss */
   .page-header {
-    margin: 30px 15px 0;
+    margin: 30px 0 0;
   }
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
   /* line 101, ../scss/custom.scss */
   .page-header h1 {
     text-align: right;
+    margin: 30px 15px 0;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 106, ../scss/custom.scss */
+  /* line 107, ../scss/custom.scss */
   .page-header .page-title {
     margin-bottom: 30px;
   }
 }
 
-/* line 112, ../scss/custom.scss */
+/* line 113, ../scss/custom.scss */
 .post {
   margin: 0 0 40px 0;
 }
 
-/* line 115, ../scss/custom.scss */
+/* line 116, ../scss/custom.scss */
 .entry-meta {
   margin-bottom: 20px;
   line-height: 150%;
 }
 
-/* line 119, ../scss/custom.scss */
+/* line 120, ../scss/custom.scss */
 .main-content {
   padding-top: 100px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 119, ../scss/custom.scss */
+  /* line 120, ../scss/custom.scss */
   .main-content {
     padding-top: 90px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 119, ../scss/custom.scss */
+  /* line 120, ../scss/custom.scss */
   .main-content {
     padding-top: 80px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 119, ../scss/custom.scss */
+  /* line 120, ../scss/custom.scss */
   .main-content {
     padding-top: 0px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 131, ../scss/custom.scss */
+  /* line 132, ../scss/custom.scss */
   .main-content > .container {
     background-color: transparent;
+    padding: 15px;
   }
 }
 
@@ -1339,41 +1341,46 @@ a:hover {
   }
 }
 
-/* line 149, ../scss/custom.scss */
+/* line 148, ../scss/custom.scss */
+.hentry {
+  margin: 0 0 0 15px;
+}
+
+/* line 151, ../scss/custom.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 149, ../scss/custom.scss */
+  /* line 151, ../scss/custom.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 160, ../scss/custom.scss */
+/* line 162, ../scss/custom.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 157, ../scss/custom.scss */
+  /* line 159, ../scss/custom.scss */
   .image {
     width: 100%;
   }
-  /* line 167, ../scss/custom.scss */
+  /* line 169, ../scss/custom.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 173, ../scss/custom.scss */
+/* line 175, ../scss/custom.scss */
 .search, .error404 {
   padding: 60px;
 }
 
-/* line 177, ../scss/custom.scss */
+/* line 179, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1381,24 +1388,24 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 184, ../scss/custom.scss */
+/* line 186, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 189, ../scss/custom.scss */
+/* line 191, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 184, ../scss/custom.scss */
+  /* line 186, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 184, ../scss/custom.scss */
+  /* line 186, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
@@ -1407,18 +1414,18 @@ a:hover {
 /* 
  *  Sidebar
  */
-/* line 206, ../scss/custom.scss */
+/* line 208, ../scss/custom.scss */
 .sidebar {
   padding: 20px;
   margin-top: 20px;
   background-color: black;
 }
-/* line 212, ../scss/custom.scss */
+/* line 214, ../scss/custom.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 216, ../scss/custom.scss */
+/* line 218, ../scss/custom.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
@@ -1426,7 +1433,7 @@ a:hover {
 /* 
  *  Modal
  */
-/* line 227, ../scss/custom.scss */
+/* line 229, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
@@ -1434,16 +1441,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 237, ../scss/custom.scss */
+/* line 239, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 241, ../scss/custom.scss */
+/* line 243, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 244, ../scss/custom.scss */
+/* line 246, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1452,7 +1459,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 249, ../scss/custom.scss */
+/* line 251, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1462,7 +1469,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 256, ../scss/custom.scss */
+/* line 258, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1471,13 +1478,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 266, ../scss/custom.scss */
+  /* line 268, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 271, ../scss/custom.scss */
+/* line 273, ../scss/custom.scss */
 .ktext {
   line-height: 21px !important;
   margin: 15px 0 !important;
@@ -1487,17 +1494,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 283, ../scss/custom.scss */
+/* line 285, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 286, ../scss/custom.scss */
+/* line 288, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #bf7485;
 }
 
-/* line 292, ../scss/custom.scss */
+/* line 294, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #b12e4f;
   background-color: #b12e4f;
@@ -1507,7 +1514,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 297, ../scss/custom.scss */
+/* line 299, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #bf7485;
   -webkit-transition: background-color, 0.25s;
@@ -1519,126 +1526,126 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 308, ../scss/custom.scss */
+/* line 310, ../scss/custom.scss */
 .mq-list {
   padding-bottom: 20px;
 }
-/* line 310, ../scss/custom.scss */
+/* line 312, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 310, ../scss/custom.scss */
+  /* line 312, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 310, ../scss/custom.scss */
+  /* line 312, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 310, ../scss/custom.scss */
+  /* line 312, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 325, ../scss/custom.scss */
+/* line 327, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 325, ../scss/custom.scss */
+  /* line 327, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 325, ../scss/custom.scss */
+  /* line 327, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 334, ../scss/custom.scss */
+/* line 336, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 334, ../scss/custom.scss */
+  /* line 336, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 340, ../scss/custom.scss */
+/* line 342, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 343, ../scss/custom.scss */
+/* line 345, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 349, ../scss/custom.scss */
+/* line 351, ../scss/custom.scss */
 .entry-content {
   padding: 15px 3px;
 }
-/* line 351, ../scss/custom.scss */
+/* line 353, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
   text-shadow: 0px 2px 3px black;
 }
 @media only all and (max-width: 991px) {
-  /* line 351, ../scss/custom.scss */
+  /* line 353, ../scss/custom.scss */
   .entry-content p {
     font-size: 15px;
     line-height: 21px;
   }
 }
-/* line 359, ../scss/custom.scss */
+/* line 361, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 366, ../scss/custom.scss */
+/* line 368, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 372, ../scss/custom.scss */
+  /* line 374, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 378, ../scss/custom.scss */
+/* line 380, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 382, ../scss/custom.scss */
+/* line 384, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 385, ../scss/custom.scss */
+/* line 387, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 389, ../scss/custom.scss */
+/* line 391, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 394, ../scss/custom.scss */
+/* line 396, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 400, ../scss/custom.scss */
+/* line 402, ../scss/custom.scss */
 .hero-right {
   margin-top: 21px;
   margin-bottom: 40px;
@@ -1649,41 +1656,41 @@ a:hover {
   border-radius: 10px;
 }
 @media only all and (max-width: 767px) {
-  /* line 400, ../scss/custom.scss */
+  /* line 402, ../scss/custom.scss */
   .hero-right {
     margin-bottom: 0;
   }
 }
 
-/* line 409, ../scss/custom.scss */
+/* line 411, ../scss/custom.scss */
 .col-page-left {
   padding: 0 10px 0 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 409, ../scss/custom.scss */
+  /* line 411, ../scss/custom.scss */
   .col-page-left {
     padding: 0;
   }
 }
 
-/* line 418, ../scss/custom.scss */
+/* line 420, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
 @media only all and (max-width: 767px) {
-  /* line 418, ../scss/custom.scss */
+  /* line 420, ../scss/custom.scss */
   .above-header {
     height: 190px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 418, ../scss/custom.scss */
+  /* line 420, ../scss/custom.scss */
   .above-header {
     height: 175px;
   }
 }
-/* line 429, ../scss/custom.scss */
+/* line 431, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 30px;
   padding: 15px;
@@ -1694,20 +1701,20 @@ a:hover {
   font-size: 75px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 429, ../scss/custom.scss */
+  /* line 431, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 429, ../scss/custom.scss */
+  /* line 431, ../scss/custom.scss */
   .above-header h1 {
     font-size: 49px;
     top: 155px !important;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 429, ../scss/custom.scss */
+  /* line 431, ../scss/custom.scss */
   .above-header h1 {
     font-size: 32px;
     margin-left: 0;
@@ -1718,13 +1725,13 @@ a:hover {
   }
 }
 
-/* line 457, ../scss/custom.scss */
+/* line 459, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
   position: relative;
 }
 
-/* line 465, ../scss/custom.scss */
+/* line 467, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: auto;
@@ -1733,19 +1740,19 @@ a:hover {
   z-index: 21;
 }
 @media only all and (max-width: 767px) {
-  /* line 465, ../scss/custom.scss */
+  /* line 467, ../scss/custom.scss */
   #cherry-blossoms {
     position: fixed;
   }
 }
 
-/* line 476, ../scss/custom.scss */
+/* line 478, ../scss/custom.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 481, ../scss/custom.scss */
+  /* line 483, ../scss/custom.scss */
   #cb-a, .home #cb-a, .blog #cb-a {
     height: 1100px;
     width: 930px !important;
@@ -1754,14 +1761,14 @@ a:hover {
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 481, ../scss/custom.scss */
+  /* line 483, ../scss/custom.scss */
   #cb-a, .home #cb-a, .blog #cb-a {
     width: 560px !important;
     background-position: -189px -110px !important;
   }
 }
 
-/* line 494, ../scss/custom.scss */
+/* line 496, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom-shadow.png?1389436022');
   background-position: -162px 50px;
@@ -1770,65 +1777,65 @@ a:hover {
   width: 100%;
 }
 @media only all and (max-width: 1199px) {
-  /* line 494, ../scss/custom.scss */
+  /* line 496, ../scss/custom.scss */
   #cb-a {
     background-position: -370px 50px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 494, ../scss/custom.scss */
+  /* line 496, ../scss/custom.scss */
   #cb-a {
     background-position: -490px 50px;
   }
 }
 
-/* line 513, ../scss/custom.scss */
+/* line 515, ../scss/custom.scss */
 .home #cb-a {
   background-position: -550px 13px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 513, ../scss/custom.scss */
+  /* line 515, ../scss/custom.scss */
   .home #cb-a {
     background-position: -650px 20px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 513, ../scss/custom.scss */
+  /* line 515, ../scss/custom.scss */
   .home #cb-a {
     background-position: -750px 20px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 513, ../scss/custom.scss */
+  /* line 515, ../scss/custom.scss */
   .home #cb-a {
     width: 740px !important;
     background-position: -276px -90px !important;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 529, ../scss/custom.scss */
+  /* line 531, ../scss/custom.scss */
   .home .entry-content {
     padding: 0;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 529, ../scss/custom.scss */
+  /* line 531, ../scss/custom.scss */
   .home .entry-content {
     margin-top: -15px;
   }
 }
-/* line 537, ../scss/custom.scss */
+/* line 539, ../scss/custom.scss */
 .home .main-content-inner span {
   color: #bf7485;
 }
 @media only all and (max-width: 479px) {
-  /* line 540, ../scss/custom.scss */
+  /* line 542, ../scss/custom.scss */
   .home .above-header {
     height: 285px;
   }
 }
 
-/* line 549, ../scss/custom.scss */
+/* line 551, ../scss/custom.scss */
 .blog #cb-a {
   background-position: 70% -84px;
 }
@@ -1836,7 +1843,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 559, ../scss/custom.scss */
+/* line 561, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
