--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -96,11 +96,12 @@ a:hover {
     margin: 20px 0 0;
     padding-bottom: 0;
     @include max_tablet {
-        margin: 30px 15px 0;
+        margin: 30px 0 0;
     }
     h1{
         @include tablet {
             text-align: right;
+            margin: 30px 15px 0;
         }
     }
     .page-title{
@@ -129,10 +130,9 @@ a:hover {
         padding-top: 0px;
     }
     > .container {
-        // padding-top: 15px;
-        // @extend %opaqueBg;
         @include max_tablet{
             background-color: transparent;
+            padding: 15px;
         }
     }
 }
@@ -145,7 +145,9 @@ a:hover {
         }
     }
 }
-
+.hentry {
+    margin: 0 0 0 15px;
+}
 .content{
     margin-left: 15px;
     margin-right: 15px;
