--- a/assets/scss/_thumbs.scss
+++ b/assets/scss/_thumbs.scss
@@ -13,6 +13,10 @@
             clear: both;
             min-height: 0;
         }
+        @include max_tablet{
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     }
 }
 
@@ -69,7 +73,7 @@ $thumb_hover: $red;
             img {
                 border: 3px dotted $thumb_hover;
                 border-bottom: 3px dotted $thumb_hover;
-                
+
                 @include filter(grayscale(0%));
                 @include opacity(1);
                 @include transition(opacity, 0.5s);
@@ -89,7 +93,10 @@ $thumb_hover: $red;
 }
 .thumb-title {
     min-height: 58px;
+    @include max_tablet{
+        min-height: 40px;
+    }
     @include max($pager + 1){
-        min-height: 35px;
+        min-height: 40px;
     }
 }
