--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -96,7 +96,7 @@ a:hover {
     margin: 20px 0 0;
     padding-bottom: 0;
     @include max_tablet {
-        margin: 30px 0 0;
+        margin: 30px 0 0 15px;
     }
     h1{
         @include tablet {
@@ -145,8 +145,8 @@ a:hover {
         }
     }
 }
-.hentry {
-    margin: 0 0 0 15px;
+.home .main-content-inner{
+    margin: 10px; 
 }
 .content{
     margin-left: 15px;
